--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-port",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://JuanHernandez96.github.io/React-portfolio",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
